--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -1,11 +1,20 @@
 .cell_container {
-    display: flex;
-    justify-content: center;
+    min-width: 200px;
+    text-align: center;
+    padding: 5px 3px;
+    box-sizing: content-box;
     align-items: center;
-    border: solid 1px #000;
+    border-left: solid 1px #000;
+    border-bottom: solid 1px #000;
     font: normal normal 12px Arial, sans-serif;
+    overflow-wrap: break-word;
+}
+
+.cell_container:last-child {
+    border-right: solid 1px #000;
 }
 
 .header {
     font: normal bold 14px Arial, sans-serif;
+    border-top: solid 1px #000;
 }
