--- a/src/components/Cell/Cell.css
+++ b/src/components/Cell/Cell.css
@@ -1,7 +1,8 @@
 .cell_container {
-    min-width: 200px;
+    width: 20%;
+    min-width: 20%;
     text-align: center;
-    padding: 5px 3px;
+    padding: 5px 0;
     box-sizing: content-box;
     align-items: center;
     border-left: solid 1px #000;
