--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,15 @@
 
 .header_menu_container {
   width: 100%;
+  margin-top: 30px;
   display: flex;
   justify-content: space-between;
+}
+
+.footer_container {
+  position: relative;
+  min-height: 100px;
+  margin-top: 30px;
 }
 
 .sk-circle {
