--- a/src/components/Paginator/Paginator.css
+++ b/src/components/Paginator/Paginator.css
@@ -1,3 +1,8 @@
 .paginator_container {
-    margin-top: 30px;
+    position: absolute;
+    right: 0;
+}
+
+.selected_page_button {
+    font-weight: bold;
 }
